IKKE BRY DERE OM DENNE HER

--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- IKKE BRY DERE OM DENNE HER -->
     <div id="postcard" class="postcard">
         <div class="front">
             <form id="cardForm" onsubmit="handleSubmit(event)">
